# packplot

./: README.md  TODO.md  main.py  pyproject.toml
.cursor/rules/: python-standards.mdc  windows-environment.mdc
demos/: crop_demo.py  generate_demos.py
packplot/: __init__.py  arrangement.py  crop.py  external_packers.py  extract.py  geometry.py  initialization.py  input.py  optimize.py  optimize_clearance_refinement.py  optimize_compact_layout.py  optimize_objectives.py  optimizer.py  output_backends.py  pack_phase.py  packer.py  packing.py  packplot.py  phase_pipeline.py  phase_refinement.py  pipeline.py  problem.py  pymoo_optimize.py  refine_phase.py  render.py  solvers.py  source_loaders.py  types.py
tests/: __init__.py  conftest.py  helpers.py  test_arrangement.py  test_crop.py  test_external_solvers.py  test_extract.py  test_geometry.py  test_input.py  test_optimize.py  test_output_backends.py  test_packer.py  test_packing.py  test_packplot.py  test_phase_optimizer_matrix.py  test_pipeline.py  test_render.py  test_solvers.py  test_source_loaders.py
