[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packplot"
version = "0.1.0"
description = "Pack rectangular images into an optimal composite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python-headless>=4.9.0",
    "pillow>=12.2.0",
    "rectpack>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
